# greenhouse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  sdkconfig  transform_html.sh
main/: CMakeLists.txt  main.c  network.h
main/c/: adc.c  dht22.c  network.c  pid.c  pwm.c  solenoid_valve.c  storage.c  utils.c
main/include/: adc.h  dht22.h  pid.h  pwm.h  solenoid_valve.h  storage.h  utils.h
